--- a/digital_assessment/app/web/package.json
+++ b/digital_assessment/app/web/package.json
@@ -10,11 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "chart.js": "^4.4.4",
+    "chart.js": "^4.5.0",
     "firebase": "^12.2.1",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1",
-    "react-chartjs-2": "^5.2.0"
+    "react-chartjs-2": "^5.2.0",
+    "react-dom": "^19.1.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
