🔧 Update Firebase hosting configuration
- Point hosting to correct build directory: digital_assessment/hosting/public/gambia-itc
- Fix deployment path for production build
- Ensure Firebase hosting serves from correct location

--- a/firebase.json
+++ b/firebase.json
@@ -1,6 +1,6 @@
 {
   "hosting": {
-    "public": "apps/web/dist",
+    "public": "digital_assessment/hosting/public/gambia-itc",
     "ignore": [
       "firebase.json",
       "**/.*",
