Fix API issues and improve UI
- Fix URL construction bug in fetchParticipants API call
- Add missing /participant/opportunities endpoint to Firebase Functions
- Add sector intelligence API endpoints (overview, ranking, leaders, category-comparison)
- Remove empty sections (Sector Ranking & Benchmarking, Performance Overview)
- Remove quick wins and generated opportunities features
- Update main page content and add Passport Creative link
- Fix stakeholders display in sector tab and creative industries dropdown
- Add debugging console logs for troubleshooting
- Improve header styling and navigation readability

--- a/firebase.json
+++ b/firebase.json
@@ -1,6 +1,6 @@
 {
   "hosting": {
-    "public": "digital_assessment/hosting/public/gambia-itc",
+    "public": "digital_assessment/hosting/public",
     "ignore": [
       "firebase.json",
       "**/.*",
@@ -21,14 +21,18 @@
         "headers": [
           {
             "key": "Content-Type",
-            "value": "application/javascript"
+            "value": "application/javascript; charset=utf-8"
           }
         ]
       }
     ],
     "rewrites": [
       {
-        "source": "**",
+        "source": "/api/**",
+        "function": "api"
+      },
+      {
+        "source": "!/**/*.{js,css,png,jpg,svg,ico,woff,woff2,ttf,eot}",
         "destination": "/index.html"
       }
     ]
