Major mobile responsiveness improvements and privacy protection
- Comprehensive mobile responsiveness overhaul across all sections
- Improved header layout with better button sizing and stacking
- Enhanced grid layouts with mobile-first responsive breakpoints
- Better touch interaction with proper button sizes and spacing
- Optimized text sizes and card layouts for mobile readability
- Added robots.txt to prevent crawling of /gambia-itc assessment data
- Added noindex meta tags to assessment app for additional privacy
- Updated methodology with more user-friendly language
- Fixed progress banner and survey sections for better mobile UX
- All changes deployed and tested successfully

--- a/firebase.json
+++ b/firebase.json
@@ -32,6 +32,10 @@
         "function": "api"
       },
       {
+        "source": "/gambia-itc/**",
+        "destination": "/gambia-itc/index.html"
+      },
+      {
         "source": "!/**/*.{js,css,png,jpg,svg,ico,woff,woff2,ttf,eot}",
         "destination": "/index.html"
       }
