--- a/digital_assessment/functions/package.json
+++ b/digital_assessment/functions/package.json
@@ -16,12 +16,11 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.19.2",
-    "firebase-functions": "^5.0.0",
+    "firebase-admin": "^12.7.0",
+    "firebase-functions": "^5.1.1",
     "googleapis": "^135.0.0"
   },
   "devDependencies": {
     "typescript": "^5.6.2"
   }
 }
-
-
